<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66658a"
    android:orientation="vertical"
    tools:context="com.oneshot.calculator.editorcalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/sin"
                android:text="@string/sin"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/arc_cos"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/tanh"
                android:text="@string/tanh"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/pi"
                android:text="@string/pi"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/pow_three"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/log_two"
                style="@style/radius_button_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/cos"
                android:text="@string/cos"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/arc_tan"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/arc_sinh"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/exp"
                android:text="@string/exp"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/inverse_pow"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/factorial"
                android:text="@string/factorial"
                style="@style/radius_button_style"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/tan"
                android:text="@string/tan"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/sinh"
                android:text="@string/sinh"
                style="@style/radius_button_style"/>


            <Button
                android:id="@+id/arc_cosh"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/root_two"
                android:text="@string/root2"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/log"
                android:text="@string/log"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/root_x"
                android:text="@string/root_x"
                style="@style/radius_button_style"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/arc_sin"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/cosh"
                android:text="@string/cosh"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/arc_tanh"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/pow_two"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/ln"
                android:text="@string/ln"
                style="@style/radius_button_style"/>

            <Button
                android:id="@+id/cube_root_x"
                style="@style/radius_button_style"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>